--- a/wiki/Sastanak_20090305.wiki
+++ b/wiki/Sastanak_20090305.wiki
@@ -1,4 +1,4 @@
-#summary Sastanak petog maja 2009.
+#summary Sastanak sestog maja 2009.
 
 = Termin: 16h kod Veljka=
 
@@ -25,5 +25,3 @@ http://www.planplus.co.yu/?lang=en-us
 
 = Rezultati =
 Opis i zaključke sa sastanka možemo opisati ovde
-
-
