--- a/wiki/Uparivanje_Wiimotea_sa_racunarom.wiki
+++ b/wiki/Uparivanje_Wiimotea_sa_racunarom.wiki
@@ -3,9 +3,9 @@
 = Introduction =
 
 Testirani su sledeći Bluetooth stekovi:
--Windows XP default stack (SP2 i SP3)
 
--Widcom
+* Windows XP default stack (SP2 i SP3)
+* Widcom
 
 
 = Povezivanje preko XP steka =
