Edited wiki page through web user interface.

--- a/wiki/Uparivanje_Wiimotea_sa_racunarom.wiki
+++ b/wiki/Uparivanje_Wiimotea_sa_racunarom.wiki
@@ -4,8 +4,8 @@
 
 Testirani su sledeći Bluetooth stekovi:
 
-  # Windows XP default stack (SP2 i SP3)
-  # Widcom
+  # Windows XP default stack (SP2 i SP3) - radi
+  # Widcom - ponekad radi ponekad ne
 
 
 = Povezivanje preko XP steka =
