Edited wiki page through web user interface.

--- a/wiki/Uparivanje_Wiimotea_sa_racunarom.wiki
+++ b/wiki/Uparivanje_Wiimotea_sa_racunarom.wiki
@@ -1,4 +1,5 @@
 #summary Načini povezivanja Wiimote-a na računar
+#labels Phase-Support,prikljucivanje,wiimote
 
 = Introduction =
 
@@ -19,3 +20,5 @@ Testirani su sledeći Bluetooth stekovi:
 4. LEDovke na Wiimote-u će trepereti. Periodično svakih 1-2 sekunde pritiskamo proizvoljan taster ne dajući im da prestanu. Ukoliko prestanu da trepere, ponovo stiskamo tastere 1 i 2. Postupak ponavljamo sve dok uređaj u Windowsu uspešno ne uparimo, i dok ne pokrenemo test aplikaciju. Kada se test aplikacija uspešno pokrene možemo da prestanemo da stiskamo dugmiće.
 
 5. Ukoliko tokom uparivanja Windows pita za _passkey_, biramo opciju _no passkey_
+
+6. Za više kontrolera ponoviti postupak.
