Edited wiki page through web user interface.

--- a/wiki/Tekst_zadataka.wiki
+++ b/wiki/Tekst_zadataka.wiki
@@ -9,13 +9,24 @@ Originalan tekst:
 Teme izučavanja Wii kontrolera 
 
 Wii kontroler kao 3D pointerski uređaj (svaki zadatak po 1 izvršioc):
-API za upotrebu Wii kontrolera kao 3D pointerskog uređaja pri čemu se oslanja na interni senzor 3D pokreta. Omogućiti simuliranje jednostrukog i dvostrukog klika, drag&drop. Diskusija o osetljivosti ovakve implementacije. Ilustracioni program.
-API za upotrebu Wii kontrolera kao 3D pointerskog uređaja pri čemu se oslanja na praćenje statičkog izvora IR svetlosti (4 IR LED diode, napravljen je hardver) pomoću interne IR kamere kao i kombiancijom sa internim senzorom 3D pokreta radi povećanja osetljivosti. Omogućiti simuliranje jednostrukog i dvostrukog klika, drag&drop. Ilustracioni program.
+
+
+1. API za upotrebu Wii kontrolera kao 3D pointerskog uređaja pri čemu se oslanja na interni senzor 3D pokreta. Omogućiti simuliranje jednostrukog i dvostrukog klika, drag&drop. Diskusija o osetljivosti ovakve implementacije. Ilustracioni program.
+
+
+2. API za upotrebu Wii kontrolera kao 3D pointerskog uređaja pri čemu se oslanja na praćenje statičkog izvora IR svetlosti (4 IR LED diode, napravljen je hardver) pomoću interne IR kamere kao i kombiancijom sa internim senzorom 3D pokreta radi povećanja osetljivosti. Omogućiti simuliranje jednostrukog i dvostrukog klika, drag&drop. Ilustracioni program.
+
 
 Obe teme moraju podržati i tastere kontrolera i zvučnika. 
  
 
 Wii kontroler za tracking (svaki zadatak po 3 izvršioca): 
-API za upotrebu Wii kontrolera za praćenje olovke kojoj je ugrađena IR dioda (napravljen je hardver). Ilustracija APIja sa jednostavnim PAINT programom po projekcionoj površini. Omogućiti simuliranje jednostrukog i dvostrukog klika, drag&drop.
-API za upotrebu Wii kontrolera za praćenje glave korisnika pomoću hardvera (koji se tek treba napraviti), IR diode na okviru naočara. Ilustracija APIja jednostavnim programom koji će ilustrovati gde korisnik gleda, pomeranje kursora miša pomoću pomeranja glave, ili tako nešto.
-API za praćenje do 4 IR izvora u jednom prostoru koji definišu dva ortogonalno postavljena Wii kontrolera, podrazumeva završen zadatak 1 ove grupe. Kolaboracija sa on-line snimkom realnosti koji generiše USB kamera. Ilustrovati API jednostavnim primerom, npr. sastvljanje Rubikove kocke, ili nešto slično.
+
+
+1. API za upotrebu Wii kontrolera za praćenje olovke kojoj je ugrađena IR dioda (napravljen je hardver). Ilustracija APIja sa jednostavnim PAINT programom po projekcionoj površini. Omogućiti simuliranje jednostrukog i dvostrukog klika, drag&drop.
+
+
+2. API za upotrebu Wii kontrolera za praćenje glave korisnika pomoću hardvera (koji se tek treba napraviti), IR diode na okviru naočara. Ilustracija APIja jednostavnim programom koji će ilustrovati gde korisnik gleda, pomeranje kursora miša pomoću pomeranja glave, ili tako nešto.
+
+
+3. API za praćenje do 4 IR izvora u jednom prostoru koji definišu dva ortogonalno postavljena Wii kontrolera, podrazumeva završen zadatak 1 ove grupe. Kolaboracija sa on-line snimkom realnosti koji generiše USB kamera. Ilustrovati API jednostavnim primerom, npr. sastvljanje Rubikove kocke, ili nešto slično.
