Edited wiki page through web user interface.

--- a/wiki/Sastanak_20090306.wiki
+++ b/wiki/Sastanak_20090306.wiki
@@ -26,6 +26,6 @@ http://www.planplus.co.yu/?lang=en-us
 = Rezultati =
 Rezultati sastanka su sledeći:
   * Dogovorili smo se oko daljeg toka rada. Specifično imamo konsenzus da prvo valja razviti mogućnost snimanja pokreta wii kontrolera uz odgovarajuću aplikaciju, zatim konstruisati wrapper biblioteku oko biblioteke WiimoteLib 1.7 koja bi bila na srpskom koja, osim što podržava podskup funkcija koje nama trebaju, ima i mogućnost da učitava događaje ne samo sa samog kontrolera već i iz loga događaja. Kada se prototip ove biblioteke razvije može se raditi na ostalim zadacima kako je već kom timu zgodno. 
-  * Istestirali smo hardver. Sada imamo uputstvo za uparivanje Wii kontrolera sa računarom korišćenjem običnog Win32 Bluetooth steka. Takođe imamo podatke o prostornoj rezoluciji IR kamere kontrolera. 
+  * Istestirali smo hardver. Sada imamo [Uparivanje_Wiimotea_sa_racunarom uputstvo] za uparivanje Wii kontrolera sa računarom korišćenjem običnog Win32 Bluetooth steka. Takođe imamo podatke o prostornoj rezoluciji IR kamere kontrolera. 
   * Rađeno je na online infrastrukturi projekta. Sada imamo SVN repozitorijum i uputstvo za rad sa njim. Takođe otvorena je google grupa za semi-official razmenu poruka između članova. Naravno, u wiki su dodate neke zanimljive informacije do kojih se došlo tokom sastanka.
   * Urađena je inicijalna aplikacija za reagovanje na i vizuelizaciju događaja Wii kontrolera. Ona je zatim proširena funkcionalnošću beleženja svih primljenih događaja u poseban binaran format konstruisan za tu priliku. Konačno aplikacija podržava playback događaja iz tog formata i njihovu prezentaciju.
