Edited wiki page through web user interface.

--- a/wiki/Trivia.wiki
+++ b/wiki/Trivia.wiki
@@ -7,3 +7,8 @@
 
 ===Zašto uvek jedna komponenta akcelerometra pokazuje vrednost blisku 1?===
 Akcelerometar uključuje gravitacionu komponentu u merenja
+
+===Dimenzije SensorBar-a===
+8mm heigh
+236mm long
+21mm wide
