--- a/wiki/Resursi.wiki
+++ b/wiki/Resursi.wiki
@@ -8,4 +8,4 @@
   #   http://www.wiili.org/GlovePIE
   #   http://carl.kenner.googlepages.com/glovepie
 
-  * *!WiiLi Wiki* Wiki stranica WiiLii projekta - port Linuxa za Wii. Puno dokumentacije samog hardvera, vrlo korisno. http://www.wiili.org/index.php/Main_Page
+  * *!WiiLi Wiki* Wiki stranica !WiiLii projekta - port Linuxa za Wii. Puno dokumentacije samog hardvera, vrlo korisno. http://www.wiili.org/index.php/Main_Page
