Edited wiki page through web user interface.

--- a/wiki/Sastanak_20090320.wiki
+++ b/wiki/Sastanak_20090320.wiki
@@ -14,4 +14,4 @@
 Ko može da dođe, odlično. Ostali neka pročitaju rezime na ovoj stranici.
 
 = Rezime =
-_će da bude_
+Napisaću tek danas uveče, ako me neko ne pretekne.
