Edited wiki page through web user interface.

--- a/wiki/DebugBar.wiki
+++ b/wiki/DebugBar.wiki
@@ -31,12 +31,4 @@ Otprilike ovakav:
 
 
 = Cene komponenti = 
-Ovo nisu finalne cene, i još ću ih ažurirati kada završimo projekat dizajna.
-  * *IR LED* 15 din komad
-  * *Bušena tabla* oko 80 din, nije nužna
-  * *USB konektor* 20-30 din, ako koristimo napajanje preko USB-a
-  * *DC konektor* 15 din, ako koristimo DC napajanje
-  * *Metar flat kabla* oko 100+ dinara, nije nužan, olakšava posao
-  * *Metar UTP kabla*, 25 din, ako ne koristimo flat kabel
-  * *Regulator napona* 25 din, ako koristimo DC napon
-  * *Otpornici* <20 din ukupno
+Pregled cena moze se pogledati ovde: http://spreadsheets.google.com/pub?key=pNcqrKn8eSi35am980q1rUg
