Edited wiki page through web user interface.

--- a/wiki/Pravilnik.wiki
+++ b/wiki/Pravilnik.wiki
@@ -9,3 +9,7 @@ Ovde ćemo se dogovoriti oko par stvari koje treba poštovati u radu sa projekto
 
 Za jezik na stranicama ovog projekta predlažem Srpski, latiničnim pismom.
 Profesor Ivetić je tražio da prilikom kodiranja koristimo Srpski jezik, to podrazumeva nazive metoda, promenljivih, kometare i slično. Iako Visual Studio podržava UTF predlažem latinicu, bez š, č i sl.
+
+== Kodiranje ==
+
+Poželjno je da članovi tima koji pišu kod, komenarišu isti što je moguće više. Biće nam jako korisno pri generisanju dokumentacije, čitanju tuđeg koda, i odgonetanju svog koda ;)
