Edited wiki page through web user interface.

--- a/wiki/ListaRadova.wiki
+++ b/wiki/ListaRadova.wiki
@@ -8,3 +8,4 @@ Ovde bi trebalo da svako napiše da li radi bachelor ili seminarski rad, kao i i
 = Lista =
 
   * Danilo Basarić   -   Odriče se pisanja rada
+  * Ljubomir Simin   -   oće da piše, ne zna šta
