--- a/wiki/ListaRadova.wiki
+++ b/wiki/ListaRadova.wiki
@@ -8,5 +8,5 @@ Ovde bi trebalo da svako napiše da li radi bachelor ili seminarski rad, kao i i
 = Lista =
 
   * Danilo Basarić   -   Odriče se pisanja rada
-  * Ljubomir Simin   -   oće da piše, ne zna šta
+  * Ljubomir Simin   -   wii hardver, način funkcionisanja wiimote-a, moguće upotrebe u virtual reality sistemima
   * Željko Vrbaški   -   ja bih bio zadovoljan da pišem o API'ju, ali koliko se o tome može pisati
