Edited wiki page through web user interface.

--- a/wiki/Inventar.wiki
+++ b/wiki/Inventar.wiki
@@ -7,13 +7,14 @@ Ovde imamo spisak svih stvari koje su koristimo, kao i ko ih trenutno poseduje.
 
 == Lista ==
 
-  # *!WiiMote br 1*                -   _Dragan Stevanov_(bez kutije(ne dragan vec kontroler))
+  # *!WiiMote br 1*                -   _Veljko Petrovic_(bez kutije(ne veljko vec kontroler))
   # *!WiiMote br 2*                -   _Vladimir Ivančević_
   # *!BlueTooth dongle Ivetićev*   -   _Vladimir Ivančević_
   # *!DebugBar v1.0*               -   _Ljubomir Simin_
-  # *!HeadTracing Naocare*         -   _Danilo Basarić_
+  # *!HeadTracing Naocare*         -   _Veljko Petrovic_
   # *IR marker Sith model br 1*   -   _Ljubomir Simin_
   # *IR marker Sith model br 2*   -   _Ljubomir Simin_
-  # *IR marker Jedi model br 1*   -   _Dragan Stevanov_
-  # *IR marker Jedi model br 2*   -   _Dragan Stevanov_
+  # *IR marker Jedi model br 1*   -   _Veljko Petrovic_
+  # *IR marker Jedi model br 2*   -   _Veljko Petrovic_
   # *IR !CrownCable*               -   _Dragan Stevanov_
+  # *Dongle Dragana Stevanova*       -   _Veljko Petrovic_
