--- a/wiki/Inventar.wiki
+++ b/wiki/Inventar.wiki
@@ -7,14 +7,14 @@ Ovde imamo spisak svih stvari koje su koristimo, kao i ko ih trenutno poseduje.
 
 == Lista ==
 
-  # *!WiiMote br 1*                -   _Ljubomir Simin_(bez kutije(ne Ljubomir vec kontroler))
+  # *!WiiMote br 1*                -   _Danilo Basaric_(bez kutije(ne Danilo vec kontroler))
   # *!WiiMote br 2*                -   _Vladimir Ivančević_
   # *!BlueTooth dongle Ivetićev*   -   _Vladimir Ivančević_
-  # *!DebugBar v1.0*               -   _Ljubomir Simin_
+  # *!DebugBar v1.0*  (sjeb)       -   _Ljubomir Simin_
   # *!HeadTracing Naocare*         -   _Ljubomir Simin_
   # *IR marker Sith model br 1*   -   _Ljubomir Simin_
   # *IR marker Sith model br 2*   -   _Ljubomir Simin_
   # *IR marker Jedi model br 1*   -   _Ljubomir Simin_
   # *IR marker Jedi model br 2*   -   _Ljubomir Simin_
-  # *IR !CrownCable*               -   _Dragan Stevanov_
+  # *IR !CrownCable*               -   _Ljubomir Simin_
   # *Dongle Dragana Stevanova*       -   _Veljko Petrovic_
